# Bachelor-project-Compiler-Construction

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Test1.txt  a.s  a2  a2.s  a3  a3.s  claims  input.txt  link  main.c  manual  nopeep.s  peep  peep.s  programtest  record  struct.h  test.s  test.sh  tester.s  y.output
Playground (Case Conflict)/Mark_1/: main.c
Playground/Mark_1/: main.c  main.h
Scanner_And_Parser/: Makefile  Old_EXP  exp  exp.l  input.txt  kind.h  lex.yy.c  main.c  pretty.c  pretty.h  tree.c  tree.h  y.output  y.tab.c  y.tab.h
Scanner_And_Parser/bison/: exp.y
Scanner_And_Parser/flex/: exp.l
examples/: O_Knapsack.src  check.py  gccwrap
include/: auxiliary.h  debug.h  helper.h  kind.h  linked_list.h  main.h  stack.h  struct.h  symbol.h  symboltabletest.h
lib/: README.md
litter/: Makefile
litter/playground/Mark_1/: main.c
playground/Mark_1/: readme.md
report/: notes  report.tex
report/code/: exp.txt  main.c  memory.c  pickup.c  pickup.h  pretty.c  tree.h  typechecker.c
report/report 1/: main.tex
report/report 2/: Test5.txt  Test6.txt  b_exp.txt  kind.h  main.tex  pretty.c  scan_parse.c  tree.c
report/report3/: report3.aux  report3.tex  report3.toc
report/report3/code/: check.c  check.h  debug.h  error.h  kind.h  memory.h  setup.c  stack.c  stack.h  weeder.h
src/: auxiliary.c  helper.c  linked_list.c  main.c  scan_parse.c  stack.c  symbol.c  symboltabletest.c  tests.c
src/modules/: README.md
src/modules/code/: code.c
src/modules/code/include/: code.h
src/modules/error/: error.c
src/modules/error/include/: error.h
src/modules/graph/: graph.c
src/modules/graph/include/: graph.h
src/modules/optimizer/include/: optimzer.h
src/modules/parser/: tree.c
src/modules/parser/bison/: exp.txt  exp.y
src/modules/parser/include/: tree.h
src/modules/peephole/: peephole.c
src/modules/peephole/include/: peephole.h
src/modules/pretty/: pretty.c
src/modules/pretty/include/: pretty.h
src/modules/print_asm/: print_asm.c
src/modules/print_asm/include/: print_asm.h
src/modules/reg_allocate/: bit_vector.c  liveness_analysis.c  reg_alloc.c
src/modules/reg_allocate/include/: bit_vector.h  liveness_analysis.h  reg_alloc.h
src/modules/resource/: resources.c
src/modules/resource/include/: resources.h
src/modules/rewriter/: rewriter.c
src/modules/rewriter/include/: rewriter.h
src/modules/scanner/flex/: exp.l
src/modules/symbol_tree/: symbol.c
src/modules/symbol_tree/include/: symbol.h
src/modules/table/: table.c
src/modules/table/include/: table.h
src/modules/typechecker/: check.c  pickup.c  setup.c  typechecker.c
src/modules/typechecker/include/: setup.h  typechecker.h
src/modules/weeder/: weeder.c
src/modules/weeder/include/: weeder.h
symboltree/include/: struct.h
symboltree/src/: main.c  tests.c
tests/: Test1.txt  general.src  input.sk  input.txt  or-test.src  settings.json  term.src  test0.src  test1.src  test10.src  test12.src  test13.src  test14.src  test15.src  test16.src  test17.src  test18.src  test19.src  test2.src  test20.src  test3.src  test4.src  test5.src  test6.src  test7.src  test8.src  test9.src
tests/typechecker/: list.src  par_test.src  test.src  test_arithmetic_typecheck.src  test_arithmetic_wrong_types.src  test_array_index.src  test_function_arguments.src  test_function_arguments_to_many.src  test_function_arguments_too_few.src  test_function_exists.src  test_function_return_type.src  test_function_wrong_return_type.src  test_recursive_pickup.src  test_recursive_pickup_2.src
tests/weeder/: link.src  test.src  test_arithmetic_multiply.src  test_arithmetric_zero_division.src  test_if-else_boolean_expression.src  test_if-else_only_boolean.src  test_no_return.src  test_no_return_if.src  test_no_return_multiple_functions.src  test_return_inside_outside.src  test_return_not_enough.src
